--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "miskat",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.1.0"
   },
   "devDependencies": {
